--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-view-more-text": "^2.1.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.8.3",
