--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@react-native-firebase/app": "^6.2.0",
     "@react-native-firebase/auth": "^6.2.0",
     "axios": "^0.19.1",
+    "dotenv": "^8.2.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-view-more-text": "^2.1.0"
+    "react-native-view-more-text": "^2.1.0",
+    "react-native-xml2js": "^1.0.3",
+    "react-xml-parser": "^1.1.3"
   },
   "devDependencies": {
     "@babel/runtime": "7.8.3",
