--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
     "@react-native-firebase/app": "^6.2.0",
     "@react-native-firebase/auth": "^6.2.0",
     "axios": "^0.19.1",
@@ -18,10 +19,16 @@
     "react-native": "0.61.5",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "^1.5.3",
     "react-native-google-books": "^1.0.4",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.6.2",
+    "react-native-screens": "^2.0.0-alpha.32",
     "react-native-vector-icons": "^6.6.0",
     "react-native-view-more-text": "^2.1.0",
     "react-native-xml2js": "^1.0.3",
+    "react-navigation": "^4.1.0",
+    "react-navigation-stack": "^2.0.16",
     "react-xml-parser": "^1.1.3"
   },
   "devDependencies": {
