--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,6 +35,8 @@ target 'BookClub' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-cameraroll', :path => '../node_modules/@react-native-community/cameraroll'
+
   target 'BookClubTests' do
     inherit! :search_paths
     # Pods for testing
