--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.32",
+    "react-native-swipe-list-view": "^2.1.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-view-more-text": "^2.1.0",
     "react-native-xml2js": "^1.0.3",
