--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-gesture-handler": "^1.5.3",
     "react-native-google-books": "^1.0.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-modal": "^11.5.3",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.32",
