--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-xml2js": "^1.0.3",
     "react-navigation": "^4.1.0",
     "react-navigation-stack": "^2.0.16",
-    "react-xml-parser": "^1.1.3"
+    "react-xml-parser": "^1.1.3",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@babel/runtime": "7.8.3",
