--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@react-native-firebase/app": "^6.3.1",
     "@react-native-firebase/auth": "^6.3.1",
     "@react-native-firebase/firestore": "^6.3.1",
+    "@react-navigation/bottom-tabs": "^5.0.7",
+    "@react-navigation/material-bottom-tabs": "^5.0.7",
+    "@react-navigation/native": "^5.0.7",
+    "@react-navigation/stack": "^5.0.8",
     "axios": "^0.19.1",
     "dotenv": "^8.2.0",
     "react": "16.9.0",
@@ -23,13 +27,14 @@
     "react-native-contacts": "^5.0.7",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.5.3",
+    "react-native-gesture-handler": "^1.6.0",
     "react-native-google-books": "^1.0.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-modal": "^11.5.3",
+    "react-native-paper": "^3.6.0",
     "react-native-reanimated": "^1.7.0",
-    "react-native-safe-area-context": "^0.6.2",
-    "react-native-screens": "^2.0.0-alpha.32",
+    "react-native-safe-area-context": "^0.6.4",
+    "react-native-screens": "^2.0.0-beta.10",
     "react-native-swipe-list-view": "^2.1.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-view-more-text": "^2.1.0",
