--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@react-navigation/stack": "^5.0.8",
     "axios": "^0.19.1",
     "dotenv": "^8.2.0",
+    "lottie-ios": "^3.1.3",
+    "lottie-react-native": "^3.3.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-contacts": "^5.0.7",
