--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/auth": "^6.3.1",
     "@react-native-firebase/firestore": "^6.3.1",
     "@react-navigation/bottom-tabs": "^5.0.7",
+    "@react-navigation/drawer": "^5.1.1",
     "@react-navigation/material-bottom-tabs": "^5.0.7",
     "@react-navigation/native": "^5.0.7",
     "@react-navigation/stack": "^5.0.8",
