--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/cameraroll": "^1.3.1",
-    "@react-native-community/datetimepicker": "^2.2.2",
-    "@react-native-community/masked-view": "^0.1.6",
-    "@react-native-firebase/app": "^6.3.1",
-    "@react-native-firebase/auth": "^6.3.1",
-    "@react-native-firebase/firestore": "^6.3.1",
-    "@react-navigation/bottom-tabs": "^5.0.7",
+    "@react-native-community/cameraroll": "^1.4.1",
+    "@react-native-community/datetimepicker": "^2.2.3",
+    "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-firebase/app": "^6.3.4",
+    "@react-native-firebase/auth": "^6.3.4",
+    "@react-native-firebase/firestore": "^6.3.4",
+    "@react-native-firebase/storage": "^6.3.4",
+    "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/drawer": "^5.1.1",
-    "@react-navigation/material-bottom-tabs": "^5.0.7",
-    "@react-navigation/native": "^5.0.7",
-    "@react-navigation/stack": "^5.0.8",
-    "axios": "^0.19.1",
+    "@react-navigation/material-bottom-tabs": "^5.1.1",
+    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
-    "lottie-ios": "^3.1.3",
+    "lottie-ios": "^3.1.6",
     "lottie-react-native": "^3.3.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -33,18 +34,18 @@
     "react-native-gesture-handler": "^1.6.0",
     "react-native-google-books": "^1.0.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
-    "react-native-modal": "^11.5.3",
+    "react-native-modal": "^11.5.4",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.4",
-    "react-native-screens": "^2.0.0-beta.10",
-    "react-native-swipe-list-view": "^2.1.3",
+    "react-native-screens": "^2.2.0",
+    "react-native-swipe-list-view": "^2.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-view-more-text": "^2.1.0",
     "react-native-xml2js": "^1.0.3",
-    "react-navigation": "^4.1.0",
-    "react-navigation-stack": "^2.0.16",
-    "react-xml-parser": "^1.1.3",
+    "react-navigation": "^4.2.2",
+    "react-navigation-stack": "^2.2.3",
+    "react-xml-parser": "^1.1.6",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
